--- a/Pompier/nbproject/project.properties
+++ b/Pompier/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/Pompier.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27\\lib\\mysql-connector-java-5.0.8-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
